[package]
name = "flutter_blog_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.0"

# logging(option)
log = "0.4"
fast_log = "1.5"
# serde/rbs (required)
serde = { version = "1", features = ["derive"] }
rbs = { version = "0.1" }
rbatis = { version = "4.0" }
# choose one rbdc drivier
rbdc-pg = { version = "0.1" }
once_cell = "1.16.0"
tower-http = { version = "0.3.4", features = ["cors"] }
git2 = "0.15.0"
